--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,9 @@
   "name": "test",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.3.5"
+    "backbone": "~1.2.2",
+    "jquery": "~2.1.4"
   },
   "overrides": {
-    "bootstrap": {
-      "main": [
-        "less/bootstrap.less",
-        "dist/css/bootstrap.css",
-        "dist/js/bootstrap.js",
-        "dist/fonts/*"
-      ]
-    }
   }
 }
